# kubeflow-pipelines-poc

./: .gitignore  Dockerfile  build-base-image.sh  build-source-image.sh  main.py  pyproject.toml
base_image/: Dockerfile  requirements.txt
compiled/: cancer-classifier.yaml  pipeline.yaml
components/: fetch_data.py  model.py
tests/components/: test__fetch_data.py  test__model.py
utils/: git.py
