[tool.poetry]
name = "kubeflow-pipelines"
version = "0.1.0"
description = ""
authors = ["Mark Barna <->"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
scikit-learn = "^0.24.2"
kfp = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
